# lilith-rs

./: .gitignore  Cargo.toml  README.md  run.sh
.cargo/: config.toml
cmd/: Cargo.toml
cmd/.cargo/: config.toml
cmd/cat/: Cargo.toml
cmd/cat/src/: main.rs
host/: Cargo.toml
host/fs-tool/: Cargo.toml
host/fs-tool/src/: main.rs
kernel/: Cargo.toml  build.rs  linker.ld  qemu.sh
kernel/.cargo/: config.toml
kernel/src/: boot.S  boot.s  debug_info.rs  device.rs  draw.rs  id_vec.rs  interrupts.rs  mach.rs  main.rs  memory.rs  prelude.rs  ramfs.rs  sched.rs  serial.rs  sync.rs  tasks.rs  test.rs  user.rs  util.rs  vesa.c  vga_buffer.rs
kernel/src/device/: serial.rs  vga.rs  vga_buffer.rs
kernel/src/draw/: banded_region.rs  geometry.rs  surface.rs  text.rs  vesa.rs  window.rs
kernel/src/interrupts/: tables.rs
kernel/src/memory/: address_space.rs  boot_alloc.rs  bootstrap.rs  buddy.rs  debug_info.rs  frame_info.rs  multiboot.rs  rbtree.rs  slub.rs  virtual_alloc.rs
src/: debug_info.rs  gdt.rs  interrupts.rs  main.rs  vga_buffer.rs
