[package]
name = "lilith"
version = "0.1.0"
edition = "2024"

[dependencies]
arrayvec = { version = "0.7.6", default-features = false }
bootloader = { version = "0.9", features = ["map_physical_memory"] }
lazy_static = { version = "1.0", features = ["spin_no_std"] }
spin = "0.10.0"
uart_16550 = "0.2.0"
volatile = "0.2.6"
x86_64 = "0.14.2"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]
run-args = ["-serial", "stdio"]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33
test-timeout = 300

[[bin]]
name = "lilith"
test = true
bench = false

[package.metadata.bootloader]
# need to adjust these two together to keep the top at 0xFFFFFFFFA0000000
kernel-stack-address = "0xFFFFFFFF9FF00000"
kernel-stack-size = 255 # not counting guard page
physical-memory-offset = "0xFFFF800000000000"
boot-info-address = "0xFFFFFFFF90000000"