[workspace]

[package]
name = "lilith"
version = "0.1.0"
edition = "2024"

[dependencies]
arrayvec = { version = "0.7.6", default-features = false }
fastrand = { version = "2.3.0", default-features = false }
lazy_static = { version = "1.0", features = ["spin_no_std"] }
pic8259 = "0.10.1"
spin = "0.10.0"
uart_16550 = "0.2.0"
volatile = "0.2.6"
x86_64 = "0.14.2"
xmas-elf = "0.10.0"

[build-dependencies]
cc = "1.2.59"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[[bin]]
name = "lilith"
test = true
bench = false
